--- a/index.html
+++ b/index.html
@@ -1,42 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
+    <meta name="description" content="Your website description here">
+    <title>About Roblox888i</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('your-background-image.jpg');
+            background-size: cover;
+            color: #fff;
+            text-align: center;
+            font-family: 'Arial', sans-serif;
+        }
+
+        h1 {
+            font-size: 3em;
+        }
+    </style>
 </head>
-
 <body>
-    <header>
-        <h1>Your Website Name</h1>
-    </header>
-
-    <nav>
-        <a href="home.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-
-    <script>
-        // Optional: Add JavaScript for smooth scrolling
-        document.querySelectorAll('nav a').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-
-                fetch(this.getAttribute('href'))
-                    .then(response => response.text())
-                    .then(html => {
-                        document.querySelector('main').innerHTML = html;
-                    });
-            });
-        });
-    </script>
-
-    <main>
-        <!-- Content will be loaded here -->
-    </main>
+    <h1>Roblox888i's website</h1>
 </body>
-
 </html>
