--- a/index.html
+++ b/index.html
@@ -23,9 +23,29 @@
         h1 {
             font-size: 3em;
         }
+
+        section {
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #333;
+            color: #fff;
+            font-size: 2em;
+        }
     </style>
 </head>
 <body>
     <h1>Roblox888i's website</h1>
+
+    <!-- About Me Section -->
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Roblox888i is a user who makes stuff.</p>
+    </section>
+
+    <!-- Other Sections (Portfolio, Contact, etc.) -->
+    <!-- Add more sections as needed with unique IDs -->
+
 </body>
 </html>
