--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Your website description here">
-    <title>About Roblox888i</title>
-    <style>
+    <title>Roblox888i's Website</title>
+</head>
 
 <body>
     <header>
-        <h1>Roblox888i's website</h1>
+        <h1>Roblox888i's Website</h1>
     </header>
 
     <nav>
@@ -40,3 +40,4 @@
 </body>
 
 </html>
+
