--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
         document.querySelectorAll('nav a').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
+                const target = this.getAttribute('href').substring(1);
 
-                fetch(this.getAttribute('href'))
+                fetch(`${target}.html`) // Assuming your content is in HTML files named home.html, about.html, etc.
                     .then(response => response.text())
                     .then(html => {
                         document.querySelector('main').innerHTML = html;
@@ -76,4 +77,3 @@
 </body>
 
 </html>
-
