--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         body {
             margin: 0;
             font-family: 'Arial', sans-serif;
+            background-color: #f8f8f8; /* Set your background color */
+            transition: background-color 0.5s ease; /* Add a smooth transition effect for the background color */
         }
 
         header {
@@ -30,50 +32,32 @@
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
+            transition: background-color 0.3s ease; /* Add a smooth transition effect for the background color */
         }
 
         nav a:hover {
-            background-color: #ddd;
-            color: #333;
+            background-color: #555; /* Change the background color on hover */
+            color: #ddd; /* Change the text color on hover */
         }
 
         main {
             padding: 20px;
+            opacity: 0;
+            animation: fadeIn 1s forwards; /* Add a fade-in animation for the content */
+        }
+
+        @keyframes fadeIn {
+            to {
+                opacity: 1;
+            }
         }
     </style>
 </head>
 
 <body>
-    <header>
-        <h1>Roblox888i's Website</h1>
-    </header>
+    <!-- Your existing HTML content -->
 
-    <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Contact</a>
-    </nav>
-
-    <script>
-        // Optional: Add JavaScript for smooth scrolling
-        document.querySelectorAll('nav a').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const target = this.getAttribute('href').substring(1);
-
-                fetch(`${target}.html`) // Assuming your content is in HTML files named home.html, about.html, etc.
-                    .then(response => response.text())
-                    .then(html => {
-                        document.querySelector('main').innerHTML = html;
-                    });
-            });
-        });
-    </script>
-
-    <main>
-        <!-- Content will be loaded here -->
-    </main>
+    <!-- Your existing script tag -->
 </body>
 
 </html>
