--- a/index.html
+++ b/index.html
@@ -1,63 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
+<style>
+    body {
+        margin: 0;
+        font-family: 'Arial', sans-serif;
+        background-color: #f8f8f8;
+        transition: background-color 0.5s ease;
+    }
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roblox888i's Website</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Arial', sans-serif;
-            background-color: #f8f8f8; /* Set your background color */
-            transition: background-color 0.5s ease; /* Add a smooth transition effect for the background color */
+    header {
+        background-color: #333;
+        color: #fff;
+        text-align: center;
+        padding: 20px;
+    }
+
+    nav {
+        background-color: #444;
+        overflow: hidden;
+    }
+
+    nav a {
+        float: left;
+        display: block;
+        color: #fff;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        transition: background-color 0.3s ease, color 0.3s ease;
+    }
+
+    nav a:hover {
+        background-color: #555;
+        color: #ddd;
+    }
+
+    main {
+        padding: 20px;
+        opacity: 0;
+        animation: fadeIn 1s forwards;
+    }
+
+    @keyframes fadeIn {
+        to {
+            opacity: 1;
         }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-        }
-
-        nav {
-            background-color: #444;
-            overflow: hidden;
-        }
-
-        nav a {
-            float: left;
-            display: block;
-            color: #fff;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            transition: background-color 0.3s ease; /* Add a smooth transition effect for the background color */
-        }
-
-        nav a:hover {
-            background-color: #555; /* Change the background color on hover */
-            color: #ddd; /* Change the text color on hover */
-        }
-
-        main {
-            padding: 20px;
-            opacity: 0;
-            animation: fadeIn 1s forwards; /* Add a fade-in animation for the content */
-        }
-
-        @keyframes fadeIn {
-            to {
-                opacity: 1;
-            }
-        }
-    </style>
-</head>
-
-<body>
-    <!-- Your existing HTML content -->
-
-    <!-- Your existing script tag -->
-</body>
-
-</html>
+    }
+</style>
