--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             font-family: 'Arial', sans-serif;
             background-color: #f8f8f8;
-            transition: background-color 0.5s ease;
+            transition: background-color 1s ease;
         }
 
         header {
@@ -37,6 +37,7 @@
         nav a:hover {
             background-color: #555;
             color: #ddd;
+            transform: scale(1.1);
         }
 
         main {
@@ -67,6 +68,7 @@
 
 <main>
     <!-- Content will be loaded here -->
+    <p>Welcome to my website! Feel free to explore the different sections.</p>
 </main>
 
 <script>
